# hyperbeam

./: .gitignore  Makefile  README.md  pyproject.toml
src/: example.ipynb  web_search.py
src/hyperbeam/: __init__.py  example.ipynb
